# xls2csv

./: .gitignore  Dockerfile  Makefile  README.md  SantanderEle.csv  SantanderEle.xls  pyproject.toml  run.sh
manual_test/: Account.xls
script/: xls2csv.sh
tests/: Account.xls  AccountReader.py  SantanderEle.xls  create_degiro_test_data.py  export_excel1.xlsx  export_excel2.xlsx  santandersp.py  testDebit.py  test_degiro.py  testregex.py
xls2csv/: BaseGenerator.py  Colors.py  Constants.py  DBHandler.py  Degiro2CSV.py  IngDirect2CSV.py  Revolut2CSV.py  Santander2CSV.py  SantanderCredit2CSV.py  SantanderDebit2CSV.py  SantanderMobile2CSV.py  SantanderTwo2CSV.py  Wise2CSV.py  generateIng.py  generateSantanderCredit.py  generateSantanderDebit.py  testregex.py  xls2csv.py
xls2csv/postprocessing/: AmazonPrimeHandler.py  PostProcessor.py  __init__.py
xls2csv/tests/: file.csv  out.csv  out2.csv  testregex.py
xls2csv/xls2csv/: generateSantanderDebit.py
