[tool.poetry]
name = "xls2csv"
version = "0.1.0"
description = "Converts an XLS file to CSV"
authors = ["Nicolas Dobler"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
